# reality-sr

./: .gitignore  README.md  pyproject.toml  requirements.txt  state_dict_convert.py
configs/: degradation_model.yaml  inference.yaml  inference_images.yaml  inference_large_image.yaml  inference_video.yaml
configs/CARN/: cargan_x4.yaml  carnet_x4.yaml
configs/EDSR/: edsrgan_x2.yaml  edsrgan_x2_degradation.yaml  edsrgan_x3.yaml  edsrgan_x3_degradation.yaml  edsrgan_x4.yaml  edsrgan_x4_degradation.yaml  edsrgan_x8_degradation.yaml  edsrnet_x2.yaml  edsrnet_x2_degradation.yaml  edsrnet_x3.yaml  edsrnet_x3_degradation.yaml  edsrnet_x4.yaml  edsrnet_x4_degradation.yaml  edsrnet_x8_degradation.yaml
configs/RFDN/: rfdgan_x4.yaml  rfdgan_x4_degradation.yaml  rfdnet_x4.yaml  rfdnet_x4_degradation.yaml
configs/Real_ESRGAN/: realesrgan_x2.yaml  realesrgan_x2_degradation.yaml  realesrgan_x3.yaml  realesrgan_x3_degradation.yaml  realesrgan_x4-finetune.yaml  realesrgan_x4.yaml  realesrgan_x4_degradation-finetune.yaml  realesrgan_x4_degradation.yaml  realesrnet_x2.yaml  realesrnet_x2_degradation.yaml  realesrnet_x3.yaml  realesrnet_x3_degradation.yaml  realesrnet_x4-finetune.yaml  realesrnet_x4.yaml  realesrnet_x4_degradation-finetune.yaml  realesrnet_x4_degradation.yaml
configs/inference/: images.yaml  large_images.yaml
data/: README.md
datasets/: README.md
demo/: images_demo.py  inference_images.py  inference_large_images.py  inference_video.py
docs/: training.md
reality_sr/: __init__.py
reality_sr/apis/: __init__.py  image_inferencer.py  large_image_super_resolution.py  large_images_super_resolution.py  super_resolution.py  video_super_resolution.py
reality_sr/data/: __init__.py  bicubic_image_dataset.py  degenerated_image_dataset.py  degradations.py  paired_image_dataset.py  transforms.py
reality_sr/engine/: __init__.py  backend.py  evaler.py  inferencer.py  tft_inferencer.py  trainer.py  trt_inferencer.py
reality_sr/evaluation/: __init__.py
reality_sr/layers/: __init__.py  blocks.py  ema.py  upsample.py
reality_sr/models/: __init__.py  carnet.py  discriminator_for_unet.py  edsrnet.py  rfdb.py  rfdnet.py  rrdbnet.py  vgg_feature_extraction.py
reality_sr/utils/: __init__.py  checkpoint.py  color.py  diffjepg.py  envs.py  events.py  general.py  imgproc.py  matlab_functions.py  ops.py  torch_utils.py
scripts/: get_test_datasets.sh
tests/: test_inference_time.py
tools/: eval.py  train.py
tools/analysis/: benchmark.py
tools/misc/: convert_onnx_to_tensorrt.py  convert_torch_to_onnx.py  convert_torch_to_tensorrt.py  convert_torch_to_trt.py  generate_multi_scale_dataset.py  (+1 more)
(+7 files in other folders)
