[build-system]
requires = ["flit-core >= 3.8", "ninja"]
build-backend = "flit_core.buildapi"

[project]
name = "reality_sr"
version = "0.2.0"
description = "Real world super resolution library."
readme = "README.md"
requires-python = ">= 3.10"
license.file = "LICENSE"
authors = [
    { name = "Lornatang", email = "liuchangyu1111@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Copyright (c) Lornatang. All rights reserved.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
urls.homepage = "https://github.com/pypa/build"
urls.changelog = "https://pypa-build.readthedocs.io/en/stable/changelog.html"

dependencies = [
    "fvcore",
    "natsort",
    "numpy>=2.0.0",
    "omegaconf",
    "opencv-python>=4.11.0.86",
    "scipy",
    "torch>=2.5.1",
    "torch-tensorrt==2.7.0",
    "torchvision>=0.20.1",
    "tqdm",
]

[project.scripts]
pyproject-build = "build.__main__:entrypoint"

[project.entry-points."pipx.run"]
build = "build.__main__:entrypoint"
